--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 title: Habib Galayr # your name (or website title) here
 logo: "/images/Habib Profile Pic.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description
-  <br><br>
-  Highly motivated data science professional with a passion for leveraging data to drive insights and make informed decisions. Currently pursuing a Masters in Data Science, combining theoretical knowledge with hands-on experience in real-world applications.
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/habib-galayr-b434721a0/">View My LinkedIn Profile</a> 
+ Highly motivated data science professional with a passion for leveraging data to drive insights and make informed decisions.
+ <br><br>
+ Currently pursuing a Masters in Data Science, combining theoretical knowledge with hands-on experience in real-world applications.
+
+<a href="https://www.linkedin.com/in/habib-galayr-b434721a0/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
