--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Habib Galayr # your name (or website title) here
 logo: "/images/Habib Profile Pic.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Highly motivated data science professional with a passion for leveraging data to drive insights and make informed decisions. 
   <br><br>
   Second description 
   <br><br>
